fix positioning so it doesn't push down content on mobile when toggled on/off

--- a/working-on/long-doc-2/in-page.css
+++ b/working-on/long-doc-2/in-page.css
@@ -41,11 +41,14 @@ background-color: white !important;
 z-index: 1;
 padding: 1em 1em 1em 1em;
 display: none;
+position: absolute !important;
+
 }
 
 .sticky, .overfooter {
 display: none !important;
 }
+
 }
 
 
